@@ -79,7 +79,13 @@
         href="https://trac.cyberduck.io/ticket/10115">#10115</a>)
     </li>
     <li><span class="label label-success">Feature</span> Support for eu-west-3 (Stockholm) region (S3)</li>
-    <li><span class="label label-success">Feature</span> Add <tt>--profile</tt> option to select connection profile (CLI)</li>
+    <li><span class="label label-success">Feature</span> Add <tt>--profile</tt> option to select connection profile
+        (CLI)
+    </li>
+    <li><span class="label label-success">Feature</span> Add option to disable checksum verification for file transfers
+        (<a
+            href="https://trac.cyberduck.io/ticket/10215">#10215</a>)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Stop button to interrupt transfer (<a
         href="https://trac.cyberduck.io/ticket/10363">#10363</a>)
     </li>
@@ -87,7 +93,9 @@
         successful connect (<a
             href="https://trac.cyberduck.io/ticket/10526">#10526</a>)
     </li>
-    <li><span class="label label-warning">Bugfix</span> Failure authenticating with proxy using Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)</li>
+    <li><span class="label label-warning">Bugfix</span> Failure authenticating with proxy using Integrated Windows
+        Authentication (IWA) authentication (WebDAV, Windows)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Updated localizations</li>
 
 </ul>
